--- a/docker_files/Dockerfile
+++ b/docker_files/Dockerfile
@@ -1,6 +1,6 @@
 # FROM paperspace/gradient-base:pt112-tf29-jax0317-py39-20230125
 FROM ubuntu:20.04
-RUN ./entrypoint.sh
+RUN ./docker_files/testenv.sh
 RUN apt-get update && \
 apt-get install -y curl && \
 apt-get install -y openssh-server && \
