--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -32,6 +32,5 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-        env:
-          GH_GIST_ACCESS_TOKEN: ${{ secrets.GH_GIST_ACCESS_TOKEN }}
+          build-args: GH_GIST_ACCESS_TOKEN=${{ secrets.GH_GIST_ACCESS_TOKEN }}
             
