--- a/docker_files/Dockerfile
+++ b/docker_files/Dockerfile
@@ -1,5 +1,5 @@
-# FROM paperspace/gradient-base:pt112-tf29-jax0317-py39-20230125
-FROM ubuntu:20.04
+FROM paperspace/gradient-base:pt112-tf29-jax0317-py39-20230125
+
 ARG GH_GIST_ACCESS_TOKEN
 ENV GH_GIST_ACCESS_TOKEN=$GH_GIST_ACCESS_TOKEN
 RUN echo $GH_GIST_ACCESS_TOKEN
